sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:14: error: not found: value echance
        echance(i,i+ecart)
        ^